# poc-uyuni-health-check

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_LOKI.md  pyproject.toml  setup.cfg  setup.py  uyuni-health-check.py  uyuni_health_exporter.py
.github/ISSUE_TEMPLATE/: new-data-request-template.md
.github/workflows/: pre-commit.yml
.reuse/: dep5
exporter/: Dockerfile  REAME.md  build.sh  uyuni_health_exporter.py
loki/: README.md  dashboard_with_logs.json  promtail.yaml
src/uyuni_health_check/: main.py  metrics.py  util.py
src/uyuni_health_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/uyuni_health_check/exporter/: Dockerfile  README.md  build.sh  config.yml  requirements.txt  uyuni_health_exporter.py
src/uyuni_health_check/grafana/: datasources.yaml
src/uyuni_health_check/grafana/dashboards/: dashboard_with_logs.json  supportconfig_with_logs.json.license
src/uyuni_health_check/logcli/: Dockerfile  build.sh
src/uyuni_health_check/loki/: config.yaml
src/uyuni_health_check/prometheus/: prometheus.yml
src/uyuni_health_check/promtail/: Dockerfile  promtail.yaml  promtail.yaml.j2
src/uyuni_health_check/supportconfig_exporter/: Dockerfile  config.yml.j2  supportconfig_exporter.py
