# SPDX-FileCopyrightText: 2023 SUSE LLC
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "uyuni-health-check"
description = "Show Uyuni server health metrics and logs"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Click",
    "rich",
    "requests",
    "Jinja2",
]
maintainers = [
    {name = "Pablo Suárez Hernández", email = "psuarezhernandez@suse.com"},
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/meaksh/uyuni-health-check"
tracker =  "https://github.com/meaksh/uyuni-health-check/issues"

[project.scripts]
uyuni-health-check = "uyuni_health_check.main:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
ensure_newline_before_comments=true

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, W605"
max-line-length = 88
max-complexity = 18

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"
