# SPDX-FileCopyrightText: 2023 SUSE LLC
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = uyuni_health_check
version = 0.0.1
url = "https://github.com/uyuni-project/poc-uyuni-health-check"

[options]
package_dir=
    =src
packages=find:
install_requires =
    Click
    rich
    requests
    jinja2

[options.packages.find]
where=src

[options.package_data]
uyuni_health_check =
    grafana/*
    grafana/dashboards/*
    logcli/*
    loki/*
    exporter/*
    supportconfig_exporter/*
    prometheus/*
    promtail/*

[options.entry_points]
console_scripts =
    uyuni-health-check = uyuni_health_check.main:main
